--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@nextui-org/react": "^1.0.0-beta.13",
     "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "@supabase/supabase-js": "^2.25.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
+    "react-scripts": "^5.0.1",
     "react-to-print": "^2.14.13"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "react-error-overlay": "6.0.9",
     "vite": "^4.3.9"
   }
 }
